# modorganizer-installer_fomod_csharp

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt  base_script.cpp  base_script.h  csharp_interface.cpp  csharp_interface.h  csharp_utils.h  installer_fomod_csharp.cpp  installer_fomod_csharp.h  installer_fomod_csharp_en.ts  installer_fomod_csharp_postdialog.ui  installer_fomod_csharp_predialog.ui  installer_fomod_postdialog.h  installer_fomod_predialog.h  psettings.h  xml_info_reader.h
